home page horizontal scrolling fixed

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -244,6 +244,7 @@ body{
 	font-family: Garamond;
 	font-style: normal;
 	position: fixed;
+	z-index: -2;
 }
 .logo{
 	position: fixed;
